--- a/index.html
+++ b/index.html
@@ -49,15 +49,7 @@ img{max-width:100%;display:block}
   text-shadow:0 0 12px var(--violet),0 0 24px var(--violet2)}
 .show-overlay p{margin:0;color:#eee;line-height:1.55}
 <!-- GALLERIA DINNER SHOW -->
-<div class="gallery-overlay" id="gallery">
-  <span class="close-gallery">&times;</span>
-  <div class="gallery-content">
-    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/IMG_20250831_215257.jpg" alt>
-    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/dinner2.jpg" alt="Dinner Show 2">
-    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/dinner3.jpg" alt="Dinner Show 3">
-    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/dinner4.jpg" alt="Dinner Show 4">
-  </div>
-</div>
+
 /* SERVICE */
 #service h2{color:var(--violet);font-size:1.6rem;margin:0 0 14px}
 .grid-3{display:grid;gap:16px}
@@ -307,7 +299,16 @@ img{max-width:100%;display:block}
     </div>
   </div>
 </section>
-
+  /* --- GALLERIA DINNER SHOW --- */
+<div class="gallery-overlay" id="gallery">
+  <span class="close-gallery">&times;</span>
+  <div class="gallery-content">
+    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/IMG_20250831_215257.jpg" alt>
+    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/dinner2.jpg" alt="Dinner Show 2">
+    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/dinner3.jpg" alt="Dinner Show 3">
+    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/dinner4.jpg" alt="Dinner Show 4">
+  </div>
+</div>
 <!-- SERVICE AUDIO/LUCI/VIDEO -->
 <section class="section" id="service">
   <div class="wrap">
