--- a/index.html
+++ b/index.html
@@ -207,9 +207,13 @@ img{max-width:100%;display:block}
   box-shadow: 0 0 20px rgba(178,102,255,0.3);
   transition: transform 0.3s ease;
 }
+.gallery-content img.active {
+  transform: scale(1.3);
+  z-index: 1000;
+  box-shadow: 0 0 40px rgba(255,255,255,0.6);
+  transition: transform 0.3s ease;
+}
 
-.gallery-content img:hover {
-  transform: scale(1.05);
 }
 
 .close-gallery {
