--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@ img{max-width:100%;display:block}
 <header class="hero">
   <div class="wrap">
     <p>
-    <h1 class="brand">ShowBiz<span>One</span></h1>
-
+    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/showbizone-logo.png" 
+     alt="ShowBizOne Logo" class="brand-logo">
     <p class="lead">
       Trasformiamo <strong>eventi</strong> in esperienze indimenticabili,
       fondendo <strong>arte</strong>, <strong>tecnologia</strong> e <strong>spettacolo</strong>.
