--- a/index.html
+++ b/index.html
@@ -253,6 +253,14 @@ img{max-width:100%;display:block}
   box-shadow: 0 0 18px var(--violet), 0 0 40px var(--violet2);
   transform: scale(1.08);
 }
+  .brand-logo {
+  width: 260px; /* puoi ridurre o aumentare per adattarlo */
+  max-width: 80%;
+  display: block;
+  margin: 0 auto 18px;
+  filter: drop-shadow(0 0 25px rgba(178,102,255,0.6));
+  animation: fadeIn 2s ease;
+  }
 </style>
 </head>
 <!-- HERO -->
