--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ img{max-width:100%;display:block}
     <p>
       <a href="https://www.instagram.com/showbizone" target="_blank" class="instagram-link">
         <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" class="instagram-icon">
-        @showbizone
+        @showbizone.entertainment
       </a>
     </p>
 
