--- a/index.html
+++ b/index.html
@@ -390,12 +390,12 @@ img{max-width:100%;display:block}
     </p>
 
     <!-- Instagram -->
-    <p>
-      <a href="https://www.instagram.com/showbizone" target="_blank" class="instagram-link">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" class="instagram-icon">
-        @showbizone.entertainment
-      </a>
-    </p>
+<p>
+  <a href="https://www.instagram.com/showbizone.entertainment?igsh=MTlrazE0eTM0cWY2" target="_blank" class="instagram-link">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" class="instagram-icon">
+    @showbizone.entertainment
+  </a>
+</p>
 
     <!-- Email -->
     <p>📧 <a href="mailto:info@showbizone.it">info@showbizone.it</a></p>
