--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@ img{max-width:100%;display:block}
   text-shadow:0 0 18px rgba(255,255,255,.7),0 0 40px rgba(178,102,255,.55)}
 .brand span{color:var(--violet);text-shadow:0 0 20px var(--violet),0 0 50px var(--violet2)}
 .hero .lead,.hero .sub{max-width:760px;margin:0 auto 10px;line-height:1.6;color:#efefef;text-shadow:0 0 6px rgba(255,255,255,.18)}
+  .brand img {
+  max-width: 220px;
+  height: auto;
+  display: block;
+  margin: 0 auto 16px auto;
+  filter: drop-shadow(0 0 25px rgba(178,102,255,0.7));
+}
+@media (min-width:900px){
+  .brand img { max-width: 280px; }
+}
 /* nessuna animazione sulla descrizione */
 
 /* EFFETTI SPECIALI full-width con testo sopra */
