--- a/index.html
+++ b/index.html
@@ -224,8 +224,6 @@ img{max-width:100%;display:block}
   transition: transform 0.3s ease;
 }
 
-}
-
 .close-gallery {
   position: absolute;
   top: 25px;
@@ -335,7 +333,7 @@ img{max-width:100%;display:block}
   <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/dinner-show-spettacolo%20(1).jpg" 
        alt="Dinner Show — spettacolo con ballerini, performer e luci sceniche durante la cena">
   <div class="show-overlay">
-  <h2><a href="#" class="dinner-btn open-circus-gallery">Circus Show</a></h2>
+  <h2><a href="#" class="dinner-btn open-gallery">Dinner Show</a></h2>
   <p>Spettacoli eleganti con musica dal vivo e coreografie d’effetto. Un mix di eleganza, tecnologia e arte per rendere unica ogni serata.</p>
   </div>
 </div>
@@ -344,7 +342,7 @@ img{max-width:100%;display:block}
     <!-- Sostituisci il nome se diverso nel repo -->
     <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/gettyimages-471730013-612x612.jpg">
     <div class="show-overlay">
-      <h2>Circus Show</h2>
+      <h2><a href="#" class="dinner-btn open-circus-gallery">Circus Show</a></h2>
       <p>Acrobazie, fuoco e illusioni visive per un intrattenimento spettacolare. ShowBizOne porta sul palco energia, eleganza e creatività senza limiti.</p>
     </div>
   </div>
