--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@ img{max-width:100%;display:block}
 
     <!-- Instagram -->
 <p>
-  <a href="https://www.instagram.com/showbizone.entertainment?igsh=MTlrazE0eTM0cWY2" target="_blank" class="instagram-link">
+  <a href="https://www.instagram.com/showbizone.entertainment?igsh=MTlrazE0eTM0cWY2" target="_blank" rel="noopener noreferrer" class="instagram-link">
     <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" class="instagram-icon">
     @showbizone.entertainment
   </a>
