--- a/index.html
+++ b/index.html
@@ -234,12 +234,14 @@ img{max-width:100%;display:block}
 }
 
 .zoom-caption {
-  margin-top: 16px;
-  font-size: 1.1rem;
-  color: #fff;
+  margin-top: 18px;
+  font-size: 1rem;
+  font-weight: 500;
+  color: #ffffff;
+  text-align: center;
   text-shadow: 0 0 14px rgba(178,102,255,0.8);
-  letter-spacing: 1px;
-  animation: fadeIn 0.4s ease;
+  letter-spacing: 0.5px;
+  animation: fadeIn 0.5s ease;
 }
 
 .zoom-overlay.active {
