--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="it">
 <head>
 <meta charset="utf-8" />
@@ -28,10 +28,19 @@ img{max-width:100%;display:block}
   text-shadow:0 0 18px rgba(255,255,255,.7),0 0 40px rgba(178,102,255,.55)}
 .brand span{color:var(--violet);text-shadow:0 0 20px var(--violet),0 0 50px var(--violet2)}
 .hero .lead,.hero .sub{max-width:760px;margin:0 auto 10px;line-height:1.6;color:#efefef;text-shadow:0 0 6px rgba(255,255,255,.18)}
-.brand img {max-width: 220px;height: auto;display: block;margin: 0 auto 16px auto;filter: drop-shadow(0 0 25px rgba(178,102,255,0.7));}
-@media (min-width:900px){.brand img { max-width: 280px; }}
+  .brand img {
+  max-width: 220px;
+  height: auto;
+  display: block;
+  margin: 0 auto 16px auto;
+  filter: drop-shadow(0 0 25px rgba(178,102,255,0.7));
+}
+@media (min-width:900px){
+  .brand img { max-width: 280px; }
+}
+/* nessuna animazione sulla descrizione */
 
-/* EFFETTI SPECIALI */
+/* EFFETTI SPECIALI full-width con testo sopra */
 .fx-section{position:relative;margin:0}
 .fx-image{position:relative;overflow:hidden}
 .fx-image img{width:100%;height:auto;object-fit:cover;filter:brightness(.45)}
@@ -40,7 +49,7 @@ img{max-width:100%;display:block}
   text-shadow:0 0 14px var(--violet),0 0 28px var(--violet2)}
 .fx-text p{margin:0;font-size:1rem;line-height:1.6;text-shadow:0 0 8px rgba(255,255,255,.75)}
 
-/* SHOWS */
+/* DINNER & CIRCUS (affiancati, responsive) */
 .shows{display:flex;gap:20px;flex-wrap:wrap;justify-content:center;padding:42px 18px}
 .show-card{position:relative;flex:1 1 360px;max-width:520px;border-radius:16px;overflow:hidden;
   background:var(--card);border:1px solid var(--border);box-shadow:0 10px 28px rgba(0,0,0,.35)}
@@ -49,8 +58,133 @@ img{max-width:100%;display:block}
 .show-overlay h2{margin:0 0 8px;font-size:1.4rem;text-transform:uppercase;color:#fff;
   text-shadow:0 0 12px var(--violet),0 0 24px var(--violet2)}
 .show-overlay p{margin:0;color:#eee;line-height:1.55}
+<!-- GALLERIA DINNER SHOW -->
 
-/* GALLERIA */
+/* SERVICE */
+#service h2{color:var(--violet);font-size:1.6rem;margin:0 0 14px}
+.grid-3{display:grid;gap:16px}
+.card{background:var(--card);border:1px solid var(--border);border-radius:14px;padding:20px;text-align:center}
+.card h3{margin:0 0 8px}
+.card p{color:var(--muted)}
+
+/* CTA */
+.cta-container{text-align:center;margin:60px 0}
+.cta-text{color:#fff;font-size:1.2rem;margin:0 0 18px}
+.cta-text strong{display:block;font-size:2.2rem;font-weight:800;color:var(--violet);letter-spacing:2px;text-shadow:0 0 20px var(--violet),0 0 40px var(--violet2)}
+.cta-button{display:inline-block;background:linear-gradient(90deg,var(--violet),var(--violet2));color:#fff;padding:14px 28px;border-radius:50px;font-weight:700;text-transform:uppercase;letter-spacing:1px;box-shadow:0 0 18px rgba(255,255,255,.25)}
+.cta-button:hover{transform:scale(1.05)}
+
+/* FOOTER */
+.footer{background:#070707;border-top:1px solid rgba(255,255,255,.08);text-align:center;padding:38px 0}
+.footer a{color:var(--violet)} .copy{color:#9c9c9c;font-size:.9rem;margin-top:6px}
+
+/* Desktop */
+@media (min-width:900px){
+  .brand{font-size:3.6rem}
+  .fx-text h2{font-size:2rem}
+  .grid-3{grid-template-columns:repeat(3,1fr)}
+}
+  @keyframes pulseGlow {
+  0% { box-shadow: 0 0 10px var(--violet), 0 0 20px var(--violet2); }
+  50% { box-shadow: 0 0 25px var(--violet2), 0 0 50px var(--violet); transform: scale(1.03); }
+  100% { box-shadow: 0 0 10px var(--violet), 0 0 20px var(--violet2); }
+}
+.cta-button {
+  animation: pulseGlow 2.5s ease-in-out infinite;
+}
+  /* --- Scritta "Entertainment" con effetto neon realistico --- */
+.entertainment {
+  display: inline-block;
+  position: relative;
+  font-size: 0.75rem; /* più piccola e proporzionata */
+  font-weight: 600;
+  color: #b266ff;
+  letter-spacing: 0.38em;
+  text-transform: uppercase;
+  margin: 4px 0 14px 0;
+  text-shadow:
+    0 0 6px #b266ff,
+    0 0 15px #d6a3ff,
+    0 0 25px rgba(255,255,255,0.7);
+  animation: neonFlicker 3s infinite;
+}
+
+/* Barra neon sotto la scritta */
+.entertainment::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  margin-top: 4px;
+  background: linear-gradient(90deg, transparent, #b266ff, transparent);
+  border-radius: 2px;
+  box-shadow:
+    0 0 10px #b266ff,
+    0 0 20px #e0b3ff,
+    0 0 40px rgba(255,255,255,0.8);
+  animation: neonBarFlicker 3s infinite;
+}
+
+@keyframes neonFlicker {
+  0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
+    opacity: 1;
+    text-shadow:
+      0 0 6px #b266ff,
+      0 0 15px #d6a3ff,
+      0 0 25px rgba(255,255,255,0.7),
+      0 0 40px #b266ff;
+  }
+  20%, 24%, 55% {
+    opacity: 0.6;
+    text-shadow:
+      0 0 3px #b266ff,
+      0 0 10px #d6a3ff;
+  }
+}
+
+@keyframes neonBarFlicker {
+  0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
+    opacity: 1;
+    box-shadow:
+      0 0 10px #b266ff,
+      0 0 25px #e0b3ff,
+      0 0 40px #fff;
+  }
+  20%, 24%, 55% {
+    opacity: 0.4;
+    box-shadow:
+      0 0 5px #b266ff,
+      0 0 10px #d6a3ff;
+  }
+}
+/* --- WHATSAPP ICON --- */
+.whatsapp-link {
+  display: inline-flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: var(--violet);
+  text-decoration: none;
+  transition: transform 0.2s ease, color 0.2s ease;
+}
+
+.whatsapp-link:hover {
+  color: var(--violet2);
+  transform: scale(1.05);
+}
+
+.whatsapp-icon {
+  width: 26px;
+  height: 26px;
+  filter: drop-shadow(0 0 6px rgba(178,102,255,0.6));
+  transition: transform 0.2s ease;
+}
+
+.whatsapp-link:hover .whatsapp-icon {
+  transform: scale(1.15);
+}
+/* --- GALLERIA DINNER SHOW --- */
 .gallery-overlay {
   position: fixed;
   inset: 0;
@@ -62,10 +196,12 @@ img{max-width:100%;display:block}
   z-index: 999;
   padding: 40px 20px;
 }
+
 .gallery-overlay.active {
   display: flex;
   animation: fadeIn 0.4s ease forwards;
 }
+
 .gallery-content {
   display: grid;
   gap: 18px;
@@ -73,16 +209,15 @@ img{max-width:100%;display:block}
   width: 100%;
   max-width: 1000px;
 }
+
 .gallery-content img {
   width: 100%;
   border-radius: 10px;
   border: 1px solid var(--border);
   box-shadow: 0 0 20px rgba(178,102,255,0.3);
   transition: transform 0.3s ease;
-  cursor: zoom-in;
 }
-
-/* ZOOM OVERLAY */
+  /* --- ZOOM CENTRATO SULL'IMMAGINE --- */
 .zoom-overlay {
   position: fixed;
   inset: 0;
@@ -93,23 +228,11 @@ img{max-width:100%;display:block}
   z-index: 2000;
   backdrop-filter: blur(4px);
 }
-.zoom-overlay.active {
-  display: flex;
-  animation: fadeIn 0.3s ease forwards;
-}
-.zoom-content {
+  .zoom-content {
   text-align: center;
   max-width: 90%;
 }
-.zoom-content img {
-  width: auto;
-  max-width: 95%;
-  max-height: 85vh;
-  margin: 0 auto;
-  display: block;
-  border-radius: 10px;
-  box-shadow: 0 0 40px rgba(178,102,255,0.6);
-}
+
 .zoom-caption {
   margin-top: 18px;
   font-size: 1rem;
@@ -120,6 +243,27 @@ img{max-width:100%;display:block}
   letter-spacing: 0.5px;
   animation: fadeIn 0.5s ease;
 }
+
+.zoom-overlay.active {
+  display: flex;
+  animation: fadeIn 0.3s ease forwards;
+}
+
+.zoom-overlay img {
+  max-width: 90%;
+  max-height: 90%;
+  border-radius: 10px;
+  box-shadow: 0 0 40px rgba(178,102,255,0.6);
+  transition: transform 0.4s ease;
+  transform: scale(1.05);
+}
+.gallery-content img.active {
+  transform: scale(1.3);
+  z-index: 1000;
+  box-shadow: 0 0 40px rgba(255,255,255,0.6);
+  transition: transform 0.3s ease;
+}
+
 .close-gallery {
   position: absolute;
   top: 25px;
@@ -130,62 +274,132 @@ img{max-width:100%;display:block}
   text-shadow: 0 0 15px var(--violet);
 }
 
-/* CTA e Footer */
-.cta-container{text-align:center;margin:60px 0}
-.cta-text{color:#fff;font-size:1.2rem;margin:0 0 18px}
-.cta-text strong{display:block;font-size:2.2rem;font-weight:800;color:var(--violet);letter-spacing:2px;text-shadow:0 0 20px var(--violet),0 0 40px var(--violet2)}
-.cta-button{display:inline-block;background:linear-gradient(90deg,var(--violet),var(--violet2));color:#fff;padding:14px 28px;border-radius:50px;font-weight:700;text-transform:uppercase;letter-spacing:1px;box-shadow:0 0 18px rgba(255,255,255,.25)}
-.footer{background:#070707;border-top:1px solid rgba(255,255,255,.08);text-align:center;padding:38px 0}
-.copy{color:#9c9c9c;font-size:.9rem;margin-top:6px}
-
 @keyframes fadeIn {
   from {opacity: 0; transform: scale(0.98);}
   to {opacity: 1; transform: scale(1);}
 }
+  /* --- PULSANTE DINNER SHOW --- */
+.dinner-btn {
+  display: inline-block;
+  background: rgba(255,255,255,0.1);
+  color: #fff;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  padding: 10px 22px;
+  border: 2px solid rgba(255,255,255,0.6);
+  border-radius: 30px;
+  box-shadow: 0 0 12px rgba(255,255,255,0.25), 0 0 25px rgba(178,102,255,0.4);
+  transition: all 0.25s ease-in-out;
+  text-decoration: none;
+  font-size: 1.1rem;
+}
+
+.dinner-btn:hover {
+  background: linear-gradient(90deg, var(--violet), var(--violet2));
+  color: #fff;
+  box-shadow: 0 0 18px var(--violet), 0 0 40px var(--violet2);
+  transform: scale(1.08);
+}
+  .brand-logo {
+  width: 260px; /* puoi ridurre o aumentare per adattarlo */
+  max-width: 80%;
+  display: block;
+  margin: 0 auto 18px;
+  filter: drop-shadow(0 0 25px rgba(178,102,255,0.6));
+  animation: fadeIn 2s ease;
+  }
+  /* --- INSTAGRAM ICON --- */
+.instagram-link {
+  display: inline-flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: var(--violet);
+  text-decoration: none;
+  transition: transform 0.2s ease, color 0.2s ease;
+}
+
+.instagram-link:hover {
+  color: var(--violet2);
+  transform: scale(1.05);
+}
+
+.instagram-icon {
+  width: 26px;
+  height: 26px;
+  border-radius: 6px;
+  filter: drop-shadow(0 0 6px rgba(178,102,255,0.6));
+  transition: transform 0.2s ease;
+}
+
+.instagram-link:hover .instagram-icon {
+  transform: scale(1.15);
+}
+  .gallery-content img {
+  cursor: zoom-in;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.gallery-content img.zoomed {
+  transform: scale(1.6); /* ingrandimento */
+  z-index: 1000;
+  box-shadow: 0 0 40px rgba(178,102,255,0.5);
+  cursor: zoom-out;
+}
 </style>
 </head>
-
-<body>
 <!-- HERO -->
 <header class="hero">
   <div class="wrap">
-    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/file_00000000912071fdbb7eaad535f35e54.png" alt="ShowBizOne Logo" class="brand-logo">
-    <p class="lead">Trasformiamo <strong>eventi</strong> in esperienze indimenticabili, fondendo <strong>arte</strong>, <strong>tecnologia</strong> e <strong>spettacolo</strong>.</p>
-    <p class="sub">Un team di professionisti dello spettacolo che unisce competenza tecnica e creatività artistica per dare vita a show di livello internazionale.</p>
+    <p>
+    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/file_00000000912071fdbb7eaad535f35e54.png" 
+     alt="ShowBizOne Logo" class="brand-logo">
+    <p class="lead">
+      Trasformiamo <strong>eventi</strong> in esperienze indimenticabili,
+      fondendo <strong>arte</strong>, <strong>tecnologia</strong> e <strong>spettacolo</strong>.
+    </p>
+
+    <p class="sub">
+      Un team di professionisti dello spettacolo che unisce competenza tecnica e creatività artistica
+      per dare vita a show di livello internazionale.
+    </p>
   </div>
 </header>
-
 <!-- EFFETTI SPECIALI -->
 <section class="fx-section" id="fx">
   <div class="fx-image">
     <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/IMG_20251030_235605.jpg" alt="ShowBiz One - Effetti speciali con fiamme e laser">
-    <div class="fx-text">
-      <h2><a href="#" class="dinner-btn open-fx-gallery">Effetti Speciali</a></h2>
-      <p>Diamo potenza e adrenalina ai tuoi eventi con effetti speciali professionali: CO₂, fiamme, coriandoli, pyro indoor, geyser e special FX per show ad alto impatto.</p>
-    </div>
-  </div>
+<div class="fx-text">
+  <h2><a href="#" class="dinner-btn open-fx-gallery">Effetti Speciali</a></h2>
+  <p>Diamo potenza e adrenalina ai tuoi eventi con effetti speciali professionali: CO₂, fiamme, coriandoli, pyro indoor, geyser e special FX per show ad alto impatto.</p>
+</div>
+</div>
 </section>
 
-<!-- SHOWS -->
+<!-- DINNER & CIRCUS SHOW (affiancati) -->
 <section class="shows" id="shows">
-  <div class="show-card">
-    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/dinner-show-spettacolo%20(1).jpg" alt="Dinner Show — spettacolo con ballerini, performer e luci sceniche durante la cena">
-    <div class="show-overlay">
-      <h2><a href="#" class="dinner-btn open-gallery">Dinner Show</a></h2>
-      <p>Spettacoli eleganti con musica dal vivo e coreografie d’effetto.</p>
-    </div>
+  <div class="show-card" id="dinnerCard">
+  <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/dinner-show-spettacolo%20(1).jpg" 
+       alt="Dinner Show — spettacolo con ballerini, performer e luci sceniche durante la cena">
+  <div class="show-overlay">
+  <h2><a href="#" class="dinner-btn open-gallery">Dinner Show</a></h2>
+  <p>Spettacoli eleganti con musica dal vivo e coreografie d’effetto. Un mix di eleganza, tecnologia e arte per rendere unica ogni serata.</p>
   </div>
+</div>
 
   <div class="show-card">
-    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/gettyimages-471730013-612x612.jpg" alt="Circus Show con acrobati e fuoco">
+    <!-- Sostituisci il nome se diverso nel repo -->
+    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/gettyimages-471730013-612x612.jpg">
     <div class="show-overlay">
       <h2><a href="#" class="dinner-btn open-circus-gallery">Circus Show</a></h2>
-      <p>Acrobazie, fuoco e illusioni visive per un intrattenimento spettacolare.</p>
+      <p>Acrobazie, fuoco e illusioni visive per un intrattenimento spettacolare. ShowBizOne porta sul palco energia, eleganza e creatività senza limiti.</p>
     </div>
   </div>
 </section>
 
-<!-- GALLERIE -->
+<!-- GALLERIA DINNER SHOW -->
 <div class="gallery-overlay" id="gallery">
   <span class="close-gallery">&times;</span>
   <div class="gallery-content">
@@ -195,7 +409,7 @@ img{max-width:100%;display:block}
     <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/dinner4.jpg" alt="Dinner Show 4">
   </div>
 </div>
-
+    <!-- GALLERIA EFFETTI SPECIALI -->
 <div class="gallery-overlay" id="fx-gallery">
   <span class="close-gallery">&times;</span>
   <div class="gallery-content">
@@ -205,6 +419,7 @@ img{max-width:100%;display:block}
   </div>
 </div>
 
+<!-- GALLERIA CIRCUS SHOW -->
 <div class="gallery-overlay" id="circus-gallery">
   <span class="close-gallery">&times;</span>
   <div class="gallery-content">
@@ -213,6 +428,25 @@ img{max-width:100%;display:block}
     <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/circus3.jpg" alt="Circus Show 3">
   </div>
 </div>
+<!-- SERVICE AUDIO/LUCI/VIDEO -->
+<section class="section" id="service">
+  <div class="wrap">
+    <div class="grid-3">
+      <article class="card">
+        <h3>Audio Professionale</h3>
+        <p>Impianti audio di alta qualità per eventi, concerti e spettacoli live.</p>
+      </article>
+      <article class="card">
+        <h3>Luci e Scenografie</h3>
+        <p>Illuminazione dinamica e scenografie luminose per creare atmosfere uniche.</p>
+      </article>
+      <article class="card">
+        <h3>Video e Proiezioni</h3>
+        <p>Schermi LED e proiezioni per eventi indoor e outdoor.</p>
+      </article>
+    </div>
+  </div>
+</section>
 
 <!-- CTA -->
 <div class="cta-container">
@@ -224,23 +458,59 @@ img{max-width:100%;display:block}
 <footer class="footer">
   <div class="wrap">
     <h3>Contatti</h3>
-    <p><a href="https://wa.me/393792603685" target="_blank" class="whatsapp-link"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" class="whatsapp-icon"> +39 379 260 3685</a></p>
-    <p><a href="https://www.instagram.com/showbizone.entertainment?igsh=MTlrazE0eTM0cWY2" target="_blank" class="instagram-link"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" class="instagram-icon">@showbizone.entertainment</a></p>
+
+    <!-- WhatsApp -->
+    <p>
+      <a href="https://wa.me/393792603685" target="_blank" class="whatsapp-link">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="whatsapp-icon">
+        +39 379 260 3685
+      </a>
+    </p>
+
+    <!-- Instagram -->
+<p>
+  <a href="https://www.instagram.com/showbizone.entertainment?igsh=MTlrazE0eTM0cWY2" target="_blank" rel="noopener noreferrer" class="instagram-link">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" class="instagram-icon">
+    @showbizone.entertainment
+  </a>
+</p>
+
+    <!-- Email -->
     <p>📧 <a href="mailto:info@showbizone.it">info@showbizone.it</a></p>
+
+    <!-- Copyright -->
     <p class="copy">© 2025 ShowBiz One — Tutti i diritti riservati</p>
   </div>
 </footer>
+  <script>
+function openGallery(id) {
+  document.getElementById(id).classList.add('active');
+}
 
-<script>
-function openGallery(id){document.getElementById(id).classList.add('active');}
-function closeAllGalleries(){document.querySelectorAll('.gallery-overlay').forEach(g=>g.classList.remove('active'));}
-document.querySelectorAll('.close-gallery').forEach(btn=>{btn.addEventListener('click',closeAllGalleries);});
-document.querySelector('.open-gallery').addEventListener('click',e=>{e.preventDefault();openGallery('gallery');});
-document.querySelector('.open-fx-gallery').addEventListener('click',e=>{e.preventDefault();openGallery('fx-gallery');});
-document.querySelector('.open-circus-gallery').addEventListener('click',e=>{e.preventDefault();openGallery('circus-gallery');});
-</script>
+function closeAllGalleries() {
+  document.querySelectorAll('.gallery-overlay').forEach(g => g.classList.remove('active'));
+}
 
-<!-- OVERLAY ZOOM -->
+document.querySelectorAll('.close-gallery').forEach(btn => {
+  btn.addEventListener('click', closeAllGalleries);
+});
+
+document.querySelector('.open-gallery').addEventListener('click', e => {
+  e.preventDefault();
+  openGallery('gallery');
+});
+
+document.querySelector('.open-fx-gallery').addEventListener('click', e => {
+  e.preventDefault();
+  openGallery('fx-gallery');
+});
+
+document.querySelector('.open-circus-gallery').addEventListener('click', e => {
+  e.preventDefault();
+  openGallery('circus-gallery');
+});
+  </script>
+  <!-- OVERLAY ZOOM IMMAGINE -->
 <div class="zoom-overlay" id="zoomOverlay">
   <div class="zoom-content">
     <img src="" alt="">
@@ -253,18 +523,23 @@ document.addEventListener("DOMContentLoaded", () => {
   const zoomOverlay = document.getElementById('zoomOverlay');
   const zoomImage = zoomOverlay.querySelector('img');
   const zoomCaption = zoomOverlay.querySelector('.zoom-caption');
+
+  // Gestione apertura immagine
   document.querySelectorAll('.gallery-content img').forEach(img => {
     img.addEventListener('click', () => {
       zoomImage.src = img.src;
-      zoomCaption.textContent = img.alt || "";
+      zoomCaption.textContent = img.alt || ""; // testo preso da alt
       zoomOverlay.classList.add('active');
     });
   });
-  zoomOverlay.addEventListener('click', e => {
-    if (e.target === zoomOverlay) zoomOverlay.classList.remove('active');
+
+  // Chiudi cliccando ovunque sullo sfondo
+  zoomOverlay.addEventListener('click', (e) => {
+    if (e.target === zoomOverlay) {
+      zoomOverlay.classList.remove('active');
+    }
   });
 });
 </script>
-
 </body>
 </html>
