--- a/index.html
+++ b/index.html
@@ -423,9 +423,9 @@ img{max-width:100%;display:block}
 <div class="gallery-overlay" id="circus-gallery">
   <span class="close-gallery">&times;</span>
   <div class="gallery-content">
-    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/IMG-20250612-WA0023.jpg" alt="Circus Show 1">
-    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/IMG-20250612-WA0032.jpg" alt="Circus Show 2">
-    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/IMG-20250612-WA0036.jpg" alt="Circus Show 3">
+    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/IMG-20250612-WA0023.jpg" alt="Tyron">
+    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/IMG-20250612-WA0032.jpg" alt="Stephany">
+    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/IMG-20250612-WA0036.jpg" alt="Stephany">
   </div>
 </div>
 <!-- SERVICE AUDIO/LUCI/VIDEO -->
