--- a/index.html
+++ b/index.html
@@ -519,26 +519,57 @@ document.querySelector('.open-circus-gallery').addEventListener('click', e => {
 </div>
 
 <script>
-document.addEventListener("DOMContentLoaded", () => {
-  const zoomOverlay = document.getElementById('zoomOverlay');
-  const zoomImage = zoomOverlay.querySelector('img');
-  const zoomCaption = zoomOverlay.querySelector('.zoom-caption');
+function openGallery(id) {
+  document.getElementById(id).classList.add('active');
+}
 
-  // Gestione apertura immagine
-  document.querySelectorAll('.gallery-content img').forEach(img => {
-    img.addEventListener('click', () => {
-      zoomImage.src = img.src;
-      zoomCaption.textContent = img.alt || ""; // testo preso da alt
-      zoomOverlay.classList.add('active');
-    });
-  });
+function closeAllGalleries() {
+  document.querySelectorAll('.gallery-overlay').forEach(g => g.classList.remove('active'));
+}
 
-  // Chiudi cliccando ovunque sullo sfondo
-  zoomOverlay.addEventListener('click', (e) => {
-    if (e.target === zoomOverlay) {
-      zoomOverlay.classList.remove('active');
-    }
+document.querySelectorAll('.close-gallery').forEach(btn => {
+  btn.addEventListener('click', closeAllGalleries);
+});
+
+document.querySelector('.open-gallery').addEventListener('click', e => {
+  e.preventDefault();
+  openGallery('gallery');
+});
+document.querySelector('.open-fx-gallery').addEventListener('click', e => {
+  e.preventDefault();
+  openGallery('fx-gallery');
+});
+document.querySelector('.open-circus-gallery').addEventListener('click', e => {
+  e.preventDefault();
+  openGallery('circus-gallery');
+});
+
+
+// 🟣 ZOOM CENTRALE FUNZIONANTE
+const zoomOverlay = document.createElement('div');
+zoomOverlay.classList.add('zoom-overlay');
+zoomOverlay.innerHTML = `
+  <div class="zoom-content">
+    <img src="" alt="">
+    <p class="zoom-caption"></p>
+  </div>
+`;
+document.body.appendChild(zoomOverlay);
+
+const zoomImg = zoomOverlay.querySelector('img');
+const zoomCaption = zoomOverlay.querySelector('.zoom-caption');
+
+document.querySelectorAll('.gallery-content img').forEach(img => {
+  img.addEventListener('click', e => {
+    e.stopPropagation();
+    zoomImg.src = img.src;
+    zoomCaption.textContent = img.alt || "";
+    zoomOverlay.classList.add('active');
   });
+});
+
+zoomOverlay.addEventListener('click', () => {
+  zoomOverlay.classList.remove('active');
 });
 </script>
 </body>
